--- a/license/licensing-guidelines.html
+++ b/license/licensing-guidelines.html
@@ -1,165 +1,194 @@
 <html>
-	<head>
-	<title>IT Mill Toolkit Licensing Guidelines</title>
-	<link href="../doc/manual/html-style/local.css" rel="stylesheet" type="text/css" />
-	
-	<style type="text/css">
+<head>
+<title>IT Mill Toolkit Licensing Guidelines</title>
+<link href="../doc/manual/html-style/local.css" rel="stylesheet"
+	type="text/css" />
 
+<style type="text/css">
 p.heading {
-    font-weight: bold;
+	font-weight: bold;
 }
 
 .licenses {
-    border-collapse: separate;
+	border-collapse: separate;
 }
 
 .licenses th {
-    text-align: left;
-    background-color: #ccccff;
-    padding: 3px;
+	text-align: left;
+	background-color: #ccccff;
+	padding: 3px;
 }
 
 .licenses td {
-    background-color: #f4f4f4;
-    padding: 3px;
-    text-align: left;
-    vertical-align: top;
+	background-color: #f4f4f4;
+	padding: 3px;
+	text-align: left;
+	vertical-align: top;
 }
 
 .licenses tr.even td {
-    background-color: #eeeeee;
+	background-color: #eeeeee;
 }
-
 </style>
 
-	</head>
-	<body>
-	
-	<div id="page">
-	
-		<h1>Licensing Summary</h1>
-		
-		<p>IT Mill Toolkit is available for use under two licensing options:
-		<ul>
-			<li><a href="#opensource">Open Source licensing</a> with permissive 
-			Apache 2.0 license. This option
-			includes the core library and is fully functional. Open Source licensing
-			option does not include any support, guarantees or all commercially 
-			available tools and features.</li>
-			<li><a href="#commercial">Commercial license</a> can be purchased from 
-			IT Mill Ltd. It is designed
-			to suit commercial use of the library and includes support, guarantee
-			as well as additional tools that accelerate software development with 
-			IT Mill Toolkit</li>
-		</ul>
-		</p>
-		
-		<p>Please read carefully about the licensing options below and evaluate the
-		suitability of the actual license files before use. If you have any questions
-		about licensing options, please contact sales at <a href="http://www.itmill.com/">
-		IT Mill Ltd</a>.</p>
-		
-		
+</head>
+<body>
 
-		<h1><a name="opensource"/>Open Source License</h1>
-		
-		The following libraries are included in this package and are released with 
-		Open Source license.
-						
-		<table class="licenses">
-		  <tbody><tr>
-		    <th>Package</th>
-		    <th>License</th>
-		    <th>Source Code Availability</th>
-		  </tr>
-		  <tr>
-		    <td class="package">IT Mill Toolkit User Interface Library</td>
-		    <td class="license">Apache License v. 2.0</td>
-		    <td class="location">Included in the package in src directory</td>
-		  </tr>
-		  <tr>
-		    <td class="package">Google Web Toolkit</td>
-		    <td class="license">Apache License v. 2.0</td>
-		    <td class="location">Included in the package in gwt directory</td>
-		  </tr>
-		  <tr>
-		    <td class="package">Apache Tomcat</td>
-		    <td class="license">Apache License v. 2.0</td>
-		    <td class="location"><a href="http://tomcat.apache.org/">tomcat.apache.org</a>; modifications are at org/apache/tomcat within gwt-dev.jar in gwt directory</td>
-		  </tr>
-		  <tr>
-		    <td class="package">Browser Detect v2.1.6</td>
-		    <td class="license"><a href="http://creativecommons.org/licenses/by/1.0/">Creative Commons Attribution 1.0</a></td>
-		    <td class="location"><a href="http://google-web-toolkit.googlecode.com/svn/trunk/tools/benchmark-viewer/src/com/google/gwt/junit/viewer/client/BrowserInfo.java">google-web-toolkit.googlecode.com</a>; transliterated into Java source in gwt directory</td>
-		  </tr>
-		  <tr class="even">
-		    <td class="package">Eclipse Java Development Tools (JDT)</td>
-		    <td class="license"><a href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License v. 1.0</a></td>
-		    <td class="location"><a href="http://archive.eclipse.org/eclipse/downloads/drops/R-3.1.1-200509290840/download.php?dropFile=eclipse-JDT-SDK-3.1.1.zip">eclipse.org</a></td>
-		  </tr>
-		  <tr>
-		    <td class="package">Eclipse Standard Widget Toolkit (SWT)</td>
-		    <td class="license"><a href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public License v. 1.0</a></td>
-		    <td class="location">
-		    <a href="http://download.eclipse.org/eclipse/downloads/drops/R-3.2.1-200609210945/download.php?dropFile=swt-3.2.1-gtk-linux-x86.zip">Linux</a>,
-		    <a href="http://download.eclipse.org/eclipse/downloads/drops/R-3.2.1-200609210945/download.php?dropFile=swt-3.2.1-win32-win32-x86.zip">Windows</a>, and
-		    <a href="http://download.eclipse.org/eclipse/downloads/drops/R-3.2.1-200609210945/download.php?dropFile=swt-3.2.1-carbon-macosx.zip">Mac</a>;
-		    modifications are at org/eclipse/swt within gwt-dev.jar in gwt directory
-		    </td>
-		  </tr>
-		  <tr class="even">
-		    <td class="package">JFreeChart</td>
-		    <td class="license"><a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License v. 2.1</a></td>
-		    <td class="location"><a href="http://jfree.org/jfreechart/download.html">jfree.org</a></td>
-		  </tr>
-		  <tr>
-		    <td class="package">Mozilla Rhino</td>
-		    <td class="license"><a href="http://www.mozilla.org/MPL/MPL-1.1.txt">Mozilla Public License v. 1.1</a></td>
-		    <td class="location">com/google/gwt/dev/js/rhino/ within gwt-dev.jar</td>
-		  </tr>
-		  <tr class="even">
-		    <td class="package">Mozilla 1.7.12 (Linux only)</td>
-		    <td class="license"><a href="http://www.mozilla.org/MPL/MPL-1.1.txt">Mozilla Public License v. 1.1</a></td>
-		    <td class="location"><a href="http://developer.mozilla.org/en/docs/Download_Mozilla_Source_Code">mozilla.org</a></td>
-		  </tr>
-		  <tr>
-		    <td class="package">WebKit 418.9 (Mac only)</td>
-		    <td class="license"><a href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General Public License v. 2.1</a></td>
-		    <td class="location"><a href="http://webkit.org/building/checkout.html">webkit.org</a></td>
-		  </tr>
-		  <tr>
-		    <td class="package">Winstone server???</td>
-		    <td class="license"></td>
-		    <td class="location"></td>
-		  </tr>
-		  <tr>
-		    <td class="package">Multipart/upload parser library???</td>
-		    <td class="license"></td>
-		    <td class="location"></td>
-		  </tr>
-		</tbody></table>
-		
-		<p>Please evaluate the licenses above to assure that they
-		are suitable for your use.</p>
+<div id="page">
 
-		
-		<p>The following tools and services are not provided with Open Source license
-		<ul>
-			<li><b>IT Mill Toolkit Testing Tools</b>: Demo version of Testing Tools is
-			included in this distribution package for evaluation purposes. Continuous or
-			production use of this demo package is forbidden without <a 
-				href="#commercial">commercial license</a>.</li> 
-			<li><b>Support services</b>: No support is provided, but use of discussion 
-			forums is encouraged.</li> 
-			<li><b>Guarantee</b>: Open Source version is provided without guarantee. 
-			Please report any issues, we try to fix them in upcoming product releases.</li>
-			<li><b>IPR protection</b>: No IPR protection is provided other than stated
-			in the Apache 2.0 license.</li>
-		</ul>		
+<h1>Licensing Summary</h1>
 
-		<h1><a name="commercial"/>Commercial License</h1>
-					
-	</div>
-			
-	</body>
+<p>IT Mill Toolkit is available for use under two licensing options:
+
+<ul>
+	<li><a href="#opensource">Open Source licensing</a> with
+	permissive Apache 2.0 license. This option includes the core library
+	and is fully functional. Open Source licensing option does not include
+	any support, guarantees or all commercially available tools and
+	features.</li>
+	<li><a href="#commercial">Commercial license</a> can be purchased
+	from IT Mill Ltd. It is designed to suit commercial use of the library
+	and includes support, guarantee as well as additional tools that
+	accelerate software development with IT Mill Toolkit</li>
+</ul>
+</p>
+
+<p>Please read carefully about the licensing options below and
+evaluate the suitability of the actual license files before use. If you
+have any questions about licensing options, please contact sales at <a
+	href="http://www.itmill.com/"> IT Mill Ltd</a>.</p>
+
+
+
+<h1><a name="opensource" />Open Source License</h1>
+
+The following libraries are included in this package and are released
+with Open Source license.
+
+<table class="licenses">
+	<tbody>
+		<tr>
+			<th>Package</th>
+			<th>License</th>
+			<th>Source Code Availability</th>
+		</tr>
+		<tr>
+			<td class="package">IT Mill Toolkit User Interface Library</td>
+			<td class="license">Apache License v. 2.0</td>
+			<td class="location">Included in the package in src directory</td>
+		</tr>
+		<tr>
+			<td class="package">Google Web Toolkit</td>
+			<td class="license">Apache License v. 2.0</td>
+			<td class="location">Included in the package in gwt directory</td>
+		</tr>
+		<tr>
+			<td class="package">Apache Tomcat</td>
+			<td class="license">Apache License v. 2.0</td>
+			<td class="location"><a href="http://tomcat.apache.org/">tomcat.apache.org</a>;
+			modifications are at org/apache/tomcat within gwt-dev.jar in gwt
+			directory</td>
+		</tr>
+		<tr>
+			<td class="package">Browser Detect v2.1.6</td>
+			<td class="license"><a
+				href="http://creativecommons.org/licenses/by/1.0/">Creative
+			Commons Attribution 1.0</a></td>
+			<td class="location"><a
+				href="http://google-web-toolkit.googlecode.com/svn/trunk/tools/benchmark-viewer/src/com/google/gwt/junit/viewer/client/BrowserInfo.java">google-web-toolkit.googlecode.com</a>;
+			transliterated into Java source in gwt directory</td>
+		</tr>
+		<tr class="even">
+			<td class="package">Eclipse Java Development Tools (JDT)</td>
+			<td class="license"><a
+				href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public
+			License v. 1.0</a></td>
+			<td class="location"><a
+				href="http://archive.eclipse.org/eclipse/downloads/drops/R-3.1.1-200509290840/download.php?dropFile=eclipse-JDT-SDK-3.1.1.zip">eclipse.org</a></td>
+		</tr>
+		<tr>
+			<td class="package">Eclipse Standard Widget Toolkit (SWT)</td>
+			<td class="license"><a
+				href="http://www.eclipse.org/legal/epl-v10.html">Eclipse Public
+			License v. 1.0</a></td>
+			<td class="location"><a
+				href="http://download.eclipse.org/eclipse/downloads/drops/R-3.2.1-200609210945/download.php?dropFile=swt-3.2.1-gtk-linux-x86.zip">Linux</a>,
+			<a
+				href="http://download.eclipse.org/eclipse/downloads/drops/R-3.2.1-200609210945/download.php?dropFile=swt-3.2.1-win32-win32-x86.zip">Windows</a>,
+			and <a
+				href="http://download.eclipse.org/eclipse/downloads/drops/R-3.2.1-200609210945/download.php?dropFile=swt-3.2.1-carbon-macosx.zip">Mac</a>;
+			modifications are at org/eclipse/swt within gwt-dev.jar in gwt
+			directory</td>
+		</tr>
+		<tr class="even">
+			<td class="package">JFreeChart</td>
+			<td class="license"><a
+				href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General
+			Public License v. 2.1</a></td>
+			<td class="location"><a
+				href="http://jfree.org/jfreechart/download.html">jfree.org</a></td>
+		</tr>
+		<tr>
+			<td class="package">Mozilla Rhino</td>
+			<td class="license"><a
+				href="http://www.mozilla.org/MPL/MPL-1.1.txt">Mozilla Public
+			License v. 1.1</a></td>
+			<td class="location">com/google/gwt/dev/js/rhino/ within
+			gwt-dev.jar</td>
+		</tr>
+		<tr class="even">
+			<td class="package">Mozilla 1.7.12 (Linux only)</td>
+			<td class="license"><a
+				href="http://www.mozilla.org/MPL/MPL-1.1.txt">Mozilla Public
+			License v. 1.1</a></td>
+			<td class="location"><a
+				href="http://developer.mozilla.org/en/docs/Download_Mozilla_Source_Code">mozilla.org</a></td>
+		</tr>
+		<tr>
+			<td class="package">WebKit 418.9 (Mac only)</td>
+			<td class="license"><a
+				href="http://www.gnu.org/licenses/lgpl.html">GNU Lesser General
+			Public License v. 2.1</a></td>
+			<td class="location"><a
+				href="http://webkit.org/building/checkout.html">webkit.org</a></td>
+		</tr>
+		<tr>
+			<td class="package">Jetty server (TODO: add license)</td>
+			<td class="license"></td>
+			<td class="location"></td>
+		</tr>
+		<tr>
+			<td class="package">Multipart/upload parser library (TODO: add
+			license)</td>
+			<td class="license"></td>
+			<td class="location"></td>
+		</tr>
+	</tbody>
+</table>
+
+<p>Please evaluate the licenses above to assure that they are
+suitable for your use.</p>
+
+
+<p>The following tools and services are not provided with Open
+Source license
+<ul>
+	<li><b>IT Mill Toolkit Testing Tools</b>: Demo version of Testing
+	Tools is included in this distribution package for evaluation purposes.
+	Continuous or production use of this demo package is forbidden without
+	<a href="#commercial">commercial license</a>.</li>
+	<li><b>Support services</b>: No support is provided, but use of
+	discussion forums is encouraged.</li>
+	<li><b>Guarantee</b>: Open Source version is provided without
+	guarantee. Please report any issues, we try to fix them in upcoming
+	product releases.</li>
+	<li><b>IPR protection</b>: No IPR protection is provided other
+	than stated in the Apache 2.0 license.</li>
+</ul>
+
+<h1><a name="commercial" />Commercial License</h1>
+
+</div>
+
+</body>
 </html>
