--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<h4>Documentation</h4>
 	<ul>
-	<li><a href="ReleaseNotes.html">Release Notes</a>
+	<li><a href="release-notes.html">Release Notes</a>
 	<li><a href="doc/manual/index.html">Manual</a>
 		<ul>
 			<li><a href="doc/manual/pr01.html">Preface</a></li>
