A bit more up to date texts for index.html
svn changeset:2983 branch:trunk

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <div class="content">
    <div class="preview"></div>
    <h2>Introduction</h2>
-    <p>
-	IT Mill Toolkit allows easy creation of first-class web user interfaces for Java-based programs. 
-	You can program your user interfaces in Java with our easy-to-learn <a href="doc/api/index.html">API</a>; 
-	Toolkit will then render it as a stunning <a href="http://www.openajax.org/whitepaper.html" target="new">AJAX-based</a> single-page web application.
-	</p>
 	<p>
-	AJAX user interfaces support <a href="http://www.microsoft.com/windows/ie/default.mspx" target="new">
-	Internet Explorer</a> 6-7, <a href="http://www.mozilla.com/firefox/" target="new">
-	Firefox</a> 1.5-2, <a href="http://www.opera.com/" target="new">
-	Opera</a> 9, <a href="http://www.apple.com/safari/" target="new">Safari</a> 2 and many others.
+	IT Mill Toolkit - Effortless web application development for Java-programmers.
+	<ul>
+	<li>Plain Java - no XML</li>
+	<li>Dozens of RIA components</li>
+	<li>Extend with GWT</li>
+	<li>Comprehensive documentation</li>
+	<li>Open Source core</li>
+	<li>Automated testing</li>
+	</ul>
 	</p>
    </div>
   <div class="bottom"><div></div></div>
