svn changeset:2985 branch:trunk

--- a/release-notes.html
+++ b/release-notes.html
@@ -53,7 +53,7 @@ Version <version></version>. This document is under construction.</p>
 <h4>Known issues in this Release (<version></version>)</h4>
 IE = Internet Explorer, FF = Firefox, SA = Safari, OP = Opera
 <br/>
-Starting any demo may take long time (5 seconds) on some environments. Should not affect on "real" environments, demo issue only.
+Starting any demo may take long time (5 seconds) on some environments. Should not affect on "real" environments.
 <br/>
 Table component makes extra requests when disabling/enabling the table (FF only)
 <br/>
