--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<h4>Documentation</h4>
 	<ul>
 	<li><a href="release-notes.html">Release Notes</a>
-	<li><a href="doc/manual/index.html">Manual</a>
+	<li><a href="doc/manual/index.html">Manual</a> (<a href="doc/manual.pdf">view as PDF</a>)
 		<ul>
 			<li><a href="doc/manual/pr01.html">Preface</a></li>
       <li><a href="doc/manual/ch01.html">Introduction</a></li>
