--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -16,6 +16,8 @@
 		Append your Google Maps API key to the src -attribute below, like so:
 			src="http://maps.google.com/maps?file=api&v=2&key=XXXXXXXX"
 		where the X:s represent your key.
+		Example for http://toolkit.itmill.com:
+		<script src="http://maps.google.com/maps?file=api&v=2&key=ABQIAAAA4q5gw_y_N1Anvvn1KqbLwRTHuC2ERVOT66iQW8-FqpCQQUlHqBTZ0rGKdlKh9fxQOKN87TCwVNlIXQ" type="text/javascript"></script>	
 	-->
 	<script src="http://maps.google.com/maps?file=api&v=2" type="text/javascript"></script>
 	<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'></script>
