Fixed packaging according new style.
svn changeset:3098 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript">
 		
 		window.onload = function() {
-			itm	ill.init();
+			itmill.init();
 		}
 		
 		var itmill = function() {
@@ -139,7 +139,7 @@
 			<div id="demos">
 				<h2>Demos</h2>
 				<ul id="demo-buttons">
-					<li id="feature-browser"><a href="FeaturesApplication/">Feature browser</a></li>
+					<li id="feature-browser"><a href="FeatureBrowser/">Feature browser</a></li>
 					<li id="notifications"><a href="NotificationDemo/">Notifications</a></li>
 					<li id="reservr"><a href="reservr.html">Reservation application</a></li>
 					<li id="windowed-demos"><a href="WindowedDemos">Windowed demos</a></li>
