--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -1,42 +1,27 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<head>
-<title>IT Mill Toolkit Licensing Guidelines</title>
-<link href="../doc/manual/html-style/local.css" rel="stylesheet"
-	type="text/css" />
-
-<style type="text/css">
-p.heading {
-	font-weight: bold;
-}
-
-.licenses {
-	border-collapse: separate;
-}
-
-.licenses th {
-	text-align: left;
-	background-color: #ccccff;
-	padding: 3px;
-}
-
-.licenses td {
-	background-color: #f4f4f4;
-	padding: 3px;
-	text-align: left;
-	vertical-align: top;
-}
-
-.licenses tr.even td {
-	background-color: #eeeeee;
-}
-</style>
-
-</head>
-<body>
-
-<div id="page">
-
-<h1>Licensing Summary</h1>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<title>IT Mill Toolkit 5</title>
+		<link rel="stylesheet" type="text/css" href="../demo/css/styles.css" />
+		<!--[if IE]>
+		<link rel="stylesheet" type="text/css" href="../demo/css/ie.css" />
+		<![endif]-->
+	</head>
+	<body>
+	
+	<div id="container">
+	
+		<div class="header">
+			<h1>Introducing IT Mill Toolkit 5</h1>
+			<em>Effortless web application development for Java-programmers.</em>
+		</div> <!-- /Header -->
+		
+		<div class="content">
+			
+			<div>
+				
+			<h1>Licensing Summary</h1>
 
 <p>IT Mill Toolkit is available for use under two licensing options:
 
@@ -187,8 +172,18 @@ Source license
 </ul>
 
 <h1><a name="commercial" />Commercial License</h1>
-
-</div>
-
-</body>
+			
+			</div> <!-- /getting-started -->
+			
+			<div class="clearer"></div>
+		</div> <!-- /content-->
+		
+		<div class="footer">
+			<a href="http://www.itmill.com">IT Mill Ltd.</a>
+			<em>Interfacing IT</em>
+		</div> <!-- /footer -->
+	
+	</div> <!-- /container -->
+	
+	</body>
 </html>
