--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -30,7 +30,7 @@ This document is under construction.</p>
 <p>
 
 <br />
-<h4>Known issues in this Release (<version></version>)</h4>
+<h4>Known issues in <version></version></h4>
 IE = Internet Explorer, FF = Firefox, SA = Safari, OP = Opera
 <br/>
 Starting any demo may take long time (5 seconds) on some environments. Should not affect on "real" environments.
