Added source links.
svn changeset:3115 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -169,15 +169,12 @@
 					
 					<div id="additional-demos-content"> <!-- For JavaScript hooking -->
 					<ul>
-						<li><a href="HelloWorld/">Hello world</a></li>
-						<li><a href="Calc/">Calculator</a></li>
-						<li><a href="colorpicker/">Color picker widget</a></li>
-						<li><a href="CachingDemo/">Widget caching demo</a></li>
-						<li><a href="KeyboardShortcut/">Keyboard shortcuts</a></li>
-						<li><a href="ModalWindow/">Modal window demo</a></li>
-						<li><a href="LayoutDemo/"></a>Basic layouts demo</li>
-						<li><a href="BufferedComponents/">Buffered components</a></li>
-						<li><a href="TestForNativeWindowing/">Native windows</a></li>
+						<li><a href="HelloWorld/">Hello world</a> <a href="doc/example-source/com/itmill/toolkit/demo/HelloWorld.java.html">(sources)</a></li>
+						<li><a href="Calc/">Calculator</a> <a href="doc/example-source/com/itmill/toolkit/demo/Calc.java.html">(sources)</a></li>
+						<li><a href="colorpicker/">How to make widgets demo</a> <a href="doc/example-source/com/itmill/toolkit/demo/colorpicker">(sources)</a></li>
+						<li><a href="CachingDemo/">Widget caching demo</a> <a href="doc/example-source/com/itmill/toolkit/demo/CachingDemo.java.html">(sources)</a></li>
+						<li><a href="KeyboardShortcut/">Keyboard shortcuts</a> <a href="doc/example-source/com/itmill/toolkit/demo/KeyboardShortcut.java.html">(sources)</a></li>
+						<li><a href="BufferedComponents/">Buffered components</a> <a href="doc/example-source/com/itmill/toolkit/demo/BufferedComponents.java.html">(sources)</a></li>
 					</ul>
 					</div>
 				
