Packaging fixes Added open source license and 3rd party licenses Building new package
svn changeset:3129 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -224,8 +224,7 @@
 				
 				<div class="library">
 					<h5>Library</h5>
-					<p>Contains all you need to start a new Toolkit project (binaries, sources, default 
-					themes and widgetsets). <a href="WEB-INF/lib/itmill-toolkit-<version></version>.jar">Toolkit JAR</a></p>
+					<p>WEB-INF/lib/itmill-toolkit-<version></version>.jar contains all you need to start a new Toolkit project.</a></p>
 				</div>
 				
 				<div class="documentation">
