--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -30,75 +30,78 @@ This document is under construction.</p>
 <p>
 
 <br />
-<h4>Known issues in <version></version></h4>
+<h4>Abbreviations</h4>
+<p>
 IE = Internet Explorer, FF = Firefox, SA = Safari, OP = Opera
-<br/>
+</p>
+<h4>Known issues in <version></version></h4>
+<p>
 Starting any demo may take long time (5 seconds) on some environments. Should not affect on "real" environments.
-<br/>
+</p><p>
 Table component makes extra requests when disabling/enabling the table (FF only)
-<br/>
+</p><p>
 Window: moving / dragging windows should be more usable
-<br/>
+</p><p>
 Embedded / Window: embedded (Flash) are rendered through window
-<br/>
+</p><p>
 Panel: setComponentError, setIcon, setDescription do not work
-<br/>
+</p><p>
 Select: setEnabled(false) still can be edited
-<br/>
+</p><p>
 TabSheet: container area width is different to tabs
-<br/>
+</p><p>
 setReadOnly(true): issues on multiple components
-<br/>
+</p><p>
 Tabsheet: setComponentError, setIcon, setDescription do not work
-<br/>
+</p><p>
 Calendar: jumpy, buttons change position
-<br/>
+</p><p>
 Select has thin red lines (other widgets are seen through)
-<br/>
+</p><p>
 Window / RichTextArea: whole scrolls / jumps up when bold is clicked
-<br/>
+</p><p>
 Session: When server is restarted, application hangs (Safari)
-<br/>
+</p><p>
 RichTextEditor: setEnabled(false) still can be edited
-<br/>
+</p><p>
 SplitPanel: implement spacing
-<br/>
+</p><p>
 Form two-columns GridLayout breaks captions.
-<br/>
+</p><p>
 Add setMaxLength() to TextField
-<br/>
+</p><p>
 Cancelling (big) uploads should be possible
-<br/>
+</p><p>
 (Sub-) Window closing should be possible
-<br/>
+</p><p>
 QueryContainer must implement Sortable
-<br/>
+</p><p>
 QueryContainer should implement Container.Filterable
-<br/>
+</p><p>
 QueryContainer should support preparedstatements-type API
-<br/>
+</p><p>
 Creating minimized/optimized widgetset still contains default theme (css files)
-<br/>
+</p><p>
 Select: when opening selection div it always starts from top even though currently selected value is elsewhere
-<br/>
+</p><p>
 Window resize: if mouse hits scrollbar when dragging, cursor dragging state is lost on (SA)
-<br/>
+</p><p>
 Tree don't support icons
-<br/>
+</p><p>
 Container.Hierarchical.setParent() should be setItemParent() (etc)
-<br/>
+</p><p>
 CustomComponent: setVisible(false) does not hide it, setEnabled(false) does not disable it
-<br/>
+</p><p>
 RichTextArea performance issues (FF)
-<br/>
+</p><p>
 RichTextArea extra scrollbars issues on some layouts (SA)
-<br/>
+</p><p>
 DateField.setLocale floods to other components aswell
-<br/>
+</p><p>
 Table column selector div may be positioned randomly wrong (IE)
-<br/>
+</p><p>
 Error message in Button is not shown (FF)
-<br/>
+</p>
 				
 				
 			</div> <!-- /getting-started -->
