JAR is again downloadable from index.html (duplicated it)
svn changeset:3151 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -219,7 +219,8 @@
 				
 				<div class="library">
 					<h5>Library</h5>
-					<p>WEB-INF/lib/itmill-toolkit-<version></version>.jar contains all you need to start a new Toolkit project.</a></p>
+					<p>Contains all you need to start a new Toolkit project (binaries, sources, default 
+					themes and widgetsets). <a href="itmill-toolkit-<version></version>.jar">Toolkit JAR</a></p>
 				</div>
 				
 				<div class="documentation">
