--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -31,7 +31,7 @@
 	and is fully functional. Open Source licensing option does not include
 	any support, guarantees or all commercially available tools and
 	features.</li>
-	<li><a href="#commercial">Commercial license</a> can be purchased
+	<li>Commercial license can be purchased
 	from IT Mill Ltd. It is designed to suit commercial use of the library
 	and includes support, guarantee as well as additional tools that
 	accelerate software development with IT Mill Toolkit</li>
@@ -49,7 +49,7 @@ Source license
 	<li><b>IT Mill Toolkit Testing Tools</b>: Demo version of Testing
 	Tools may be included in this distribution package for evaluation purposes.
 	Continuous or production use of this demo package is forbidden without
-	<a href="#commercial">commercial license</a>.</li>
+	commercial license.</li>
 	<li><b>Support services</b>: No support is provided, but use of
 	discussion forums is encouraged.</li>
 	<li><b>Guarantee</b>: Open Source version is provided without
