--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -23,18 +23,57 @@
 			<div>
 				<h2>Release notes version <version></version></h2>
 				
-				<h4>General</h4>
-				
-<p>
-This document is under construction.</p>
-<p>
+	<h2>Changes between Toolkit 4 and Toolkit 5.</h2>
+	
+<h4>General</h4>
+<ul>
+	<li><b>Google Web Toolkit integration</b>: Create new or customize existing components using plain Java.</li>
+	<li><b>New default theme</b>: Enhanced look and feel of existing applications.</li>
+</ul>
+
+<h4>Client-side Enhancements</h4>
+<ul>
+    <li>API enhancements</li>
+    <li>Most theming actions are now easier to do through CSS changes</li>
+</ul>
+
+<h4>New layouting API</h4>
+<ul>
+    <li>Spacing between components
+    <li>Alignments configuring
+    <li>Margins configuring
+    <li>Layout size configuring 
+</ul>
+
+<h4>Server-side enhancements</h4>
+<ul>
+	<li>Multiple different stateful views to same application</li>
+	<li> Enhanced file uploading and full streaming/monitoring support</li>
+</ul>
+
+<h4>Performance enhancements</h4>
+<ul>
+    <li>Easier client-side optimizations through GWT
+    <li>Initial launch of application has lower bandwidth requirements (100kb)
+    <li>File uploading uses less memory resources
+    <li>Client-side component caching 
+</ul>
+
+<h4>New Components</h4>
+<ul>
+    <li>ExpandLayout
+    <li>SplitPanel
+    <li>Slider
+    <li>Notification
+    <li>RichTextEditor
+    <li>EntryCalendar
+</ul>
 
 <br />
-<h4>Abbreviations</h4>
+<h2>Known issues in <version></version></h2>
 <p>
-IE = Internet Explorer, FF = Firefox, SA = Safari, OP = Opera
+Abbreviations: IE = Internet Explorer, FF = Firefox, SA = Safari, OP = Opera
 </p>
-<h4>Known issues in <version></version></h4>
 <p>
 Starting any demo may take long time (5 seconds) on some environments. Should not affect on "real" environments.
 </p><p>
