we are in beta stage
svn changeset:3172 branch:trunk

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -21,7 +21,7 @@
 		<div class="content">
 			
 			<div>
-				<h2>Release notes version <version></version></h2>
+				<h2>Release notes version <version></version> (beta)</h2>
 				
 	<h2>Changes between Toolkit 4 and Toolkit 5.</h2>
 	
@@ -70,7 +70,7 @@
 </ul>
 
 <br />
-<h2>Known issues in <version></version></h2>
+<h2>Known issues in <version></version> (beta)</h2>
 <p>
 Abbreviations: IE = Internet Explorer, FF = Firefox, SA = Safari, OP = Opera
 </p>
