Added "Beta" label for index.html.
svn changeset:3173 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -144,6 +144,7 @@
 	
 		<div class="header">
 			<h1>Introducing IT Mill Toolkit 5</h1>
+			<strong>Beta</strong>
 			<em>Effortless web application development for Java-programmers.</em>
 			<a href="http://www.itmill.com" title="Open www.itmill.com">Visit itmill.com</a>
 		</div> <!-- /Header -->
@@ -169,12 +170,12 @@
 					
 					<div id="additional-demos-content"> <!-- For JavaScript hooking -->
 					<ul>
-						<li><a href="HelloWorld/">Hello world</a> <a href="doc/example-source/com/itmill/toolkit/demo/HelloWorld.java.html">(sources)</a></li>
-						<li><a href="Calc/">Calculator</a> <a href="doc/example-source/com/itmill/toolkit/demo/Calc.java.html">(sources)</a></li>
-						<li><a href="colorpicker/">How to make widgets demo</a> <a href="doc/example-source/com/itmill/toolkit/demo/colorpicker">(sources)</a></li>
-						<li><a href="CachingDemo/">Widget caching demo</a> <a href="doc/example-source/com/itmill/toolkit/demo/CachingDemo.java.html">(sources)</a></li>
-						<li><a href="KeyboardShortcut/">Keyboard shortcuts</a> <a href="doc/example-source/com/itmill/toolkit/demo/KeyboardShortcut.java.html">(sources)</a></li>
-						<li><a href="BufferedComponents/">Buffered components</a> <a href="doc/example-source/com/itmill/toolkit/demo/BufferedComponents.java.html">(sources)</a></li>
+						<li><a href="HelloWorld/">Hello world</a> (<a href="doc/example-source/com/itmill/toolkit/demo/HelloWorld.java.html">sources</a>)</li>
+						<li><a href="Calc/">Calculator</a> (<a href="doc/example-source/com/itmill/toolkit/demo/Calc.java.html">sources</a>)</li>
+						<li><a href="colorpicker/">How to make widgets demo</a> (<a href="doc/example-source/com/itmill/toolkit/demo/colorpicker">sources</a>)</li>
+						<li><a href="CachingDemo/">Widget caching demo</a> (<a href="doc/example-source/com/itmill/toolkit/demo/CachingDemo.java.html">sources</a>)</li>
+						<li><a href="KeyboardShortcut/">Keyboard shortcuts</a> (<a href="doc/example-source/com/itmill/toolkit/demo/KeyboardShortcut.java.html">sources</a>)</li>
+						<li><a href="BufferedComponents/">Buffered components</a> (<a href="doc/example-source/com/itmill/toolkit/demo/BufferedComponents.java.html">sources</a>)</li>
 					</ul>
 					</div>
 				
