svn changeset:3174 branch:trunk

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -75,8 +75,6 @@
 Abbreviations: IE = Internet Explorer, FF = Firefox, SA = Safari, OP = Opera
 </p>
 <p>
-Starting any demo may take long time (5 seconds) on some environments. Should not affect on "real" environments.
-</p><p>
 Table component makes extra requests when disabling/enabling the table (FF only)
 </p><p>
 Window: moving / dragging windows should be more usable
@@ -140,6 +138,8 @@ DateField.setLocale floods to other components aswell
 Table column selector div may be positioned randomly wrong (IE)
 </p><p>
 Error message in Button is not shown (FF)
+</p><p>
+Calendar: date selection is not closable (IE6)
 </p>
 				
 				
