--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -252,6 +252,7 @@
 					<h4>Instant Feedback</h4>
 					<form action="http://www.itmill.com/formmail.app" enctype="multipart/form-data" method="post">
 					<input name="SuccessUrl"type="hidden" value="http://www.itmill.com/developers/feedback_ok.htm">
+					<input name="FormType" type="hidden" value="7" />
 					Send a quick message to Toolkit R&D team:<br />
 					<textarea name="feedback" cols="38" rows="3" multiline="true">Comments, suggestions, bug reports - anything.</textarea><br />
 					<input type="submit" value="Send" />
