--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -2,11 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
 	<title>IT Mill Toolkit 5 Demo: Reservr</title>
-	<script type="text/javascript">
-		var itmill = {
-			appUri:'Reservr', pathInfo: '/'
-		};
-	</script>
 	<!-- 
 		Google Maps needs an API key if you're not running this demo on "localhost". 
 		
@@ -20,8 +15,6 @@
 		<script src="http://maps.google.com/maps?file=api&v=2&key=ABQIAAAA4q5gw_y_N1Anvvn1KqbLwRTHuC2ERVOT66iQW8-FqpCQQUlHqBTZ0rGKdlKh9fxQOKN87TCwVNlIXQ" type="text/javascript"></script>	
 	-->
 	<script src="http://maps.google.com/maps?file=api&v=2" type="text/javascript"></script>
-	<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'></script>
-	<link REL="stylesheet" TYPE="text/css" HREF="ITMILL/themes/reservr/styles.css">
 </head>
 <body>
 	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
@@ -30,6 +23,18 @@
 		<span id="arrow"> </span>
 		<span id="slogan">Representational cars on-the-road</span>
 	</div>
+	<script type="text/javascript">
+	//<![CDATA[
+	if(!itmill || !itmill.toolkitConfigurations) {
+	 if(!itmill) { var itmill = {}} 
+	itmill.toolkitConfigurations = {};
+	itmill.themesLoaded = {};
+	document.write('<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>');
+	document.write("<script language='javascript' src='/ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'><\/script>");
+	}
+	itmill.toolkitConfigurations["itmill-ajax-window"] = {appUri:'/Reservr', pathInfo: '/', themeUri:'/ITMILL/themes/reservr'};
+	//]]>
+	</script>
 	<div id="itmill-ajax-window"></div>	
 </body>
 </html>
