added i-app classname
svn changeset:4281 branch:trunk

--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -47,6 +47,6 @@
 	}
 	//]]>
 	</script>
-	<div id="itmill-ajax-window"></div>	
+	<div id="itmill-ajax-window" class="i-app"></div>	
 </body>
 </html>
